# cronr

./: Cargo.toml  README.md
.github/workflows/: rust.yml
scripts/: cronr.service  install_linux.sh  install_macos.sh
src/: main.rs
src/commands/: mod.rs
src/config/: mod.rs
src/daemon/: mod.rs
src/errors/: mod.rs
src/job/: mod.rs
src/logger/: mod.rs
tests/: cli_tests.rs
